# telemon

./: .gitignore  README.md  rust-code-20250929T184723Z.txt
attestation-verifier/: Cargo.toml
attestation-verifier/src/: main.rs
attestation-verifier/src/attestation/: certs.rs  config.rs  cose.rs  errors.rs  mod.rs  pcr.rs  types.rs  util.rs  verifier.rs
nsm-enclave-runner/: .dockerignore  .env.example  Cargo.toml  Dockerfile.enclave  README.md
nsm-enclave-runner/src/: attest.rs  config.rs  handlers.rs  logging.rs  main.rs  router.rs  runner.rs  server.rs  state.rs  tls.rs
scripts/: build_enclave.sh  cleanup_workspace.sh  config.defaults.sh  fetch_latest_root.sh  open_enclave_console.sh  purge_workspace.sh  run_attestation_verifier.sh  run_enclave.sh  run_full_workflow.sh  start_socat_bridge.sh
