[package]
name = "nitro-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
tokio   = { version = "1", features = ["rt-multi-thread", "macros"] }
rand    = "0.8"
hex     = "0.4"

# COSE + CBOR
coset = "=0.3.2"
serde_cbor = "0.11"

# X.509 parsing
x509-parser = "0.16"
rustls-pemfile = "2"

# signature verification
ring = "0.17"

# certificate handling
thiserror = "1"

[dev-dependencies]
rcgen = "0.12"
