[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
# basics
anyhow = "1"
dotenvy = "0.15"         # load .env -> process env
envy    = "0.4"          # env -> struct via Serde
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# async runtime
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "net", "io-util", "signal"] }
tokio-util = "0.7"       # CancellationToken

# web stack
axum = "0.7"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower-http = { version = "0.5", features = ["trace", "timeout", "map-request-body"] }  # (no compression)
tower = "0.5"

# VSOCK + TLS
tokio-vsock = "0.5"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"

# self-signed cert + SPKI extraction
rcgen = "0.12"
x509-parser = "0.16"
time = { version = "0.3", features = ["std"] }

# serde + json + helpers
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
zeroize = "1"
rand = "0.8"
http-body-util = "0.1"
thiserror = "1"

aws-nitro-enclaves-nsm-api =  "0.4"

serde_bytes = "0.11"
coset = "0.3"

[features]
default = []
